--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sovgut/datagrid-react-router",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "type": "module",
   "repository": {
     "type": "git",
@@ -18,27 +18,33 @@
   "main": "./dist/datagrid-react-router.js",
   "types": "./dist/main.d.ts",
   "scripts": {
-    "build": "tsc -b && vite build"
+    "build": "vite build"
   },
-  "dependencies": {
-    "@sovgut/datagrid": "^1.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router": "^7.1.3"
+  "peerDependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/node": "^22.10.7",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5",
-    "vite-plugin-dts": "^4.5.0"
+    "@eslint/js": "^9.31.0",
+    "@sovgut/datagrid": "4.3.1",
+    "@types/node": "^24.0.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router": "^7.7.1",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.37.0",
+    "utility-types": "^3.11.0",
+    "vite": "^7.0.5",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
