--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "utility-types": "^3.11.0",
     "vite": "^7.0.5",
     "vite-plugin-dts": "^4.5.4"
+  },
+  "dependencies": {
+    "react-router-dom": "^7.7.1"
   }
 }
