--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "peerDependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "utility-types": "^3.11.0",
+    "react-router-dom": "^7.7.1",
+    "@sovgut/datagrid": "^4.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
-    "@sovgut/datagrid": "4.3.2",
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -43,11 +45,7 @@
     "react-router": "^7.7.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.37.0",
-    "utility-types": "^3.11.0",
     "vite": "^7.0.5",
     "vite-plugin-dts": "^4.5.4"
-  },
-  "dependencies": {
-    "react-router-dom": "^7.7.1"
   }
 }
