--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@sovgut/datagrid": "4.5.0",
+    "@sovgut/datagrid": "4.5.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "^7.12.0",
@@ -44,6 +44,7 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.53.1",
     "vite": "^7.3.1",
-    "vite-plugin-dts": "^4.5.4"
+    "vite-plugin-dts": "^4.5.4",
+    "babel-plugin-react-compiler": "^1.0.0"
   }
 }
