--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sovgut/datagrid-react-router",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "type": "module",
   "repository": {
     "type": "git",
@@ -26,7 +26,8 @@
     "react-dom": "^19.2.3",
     "react-router": "^7.12.0",
     "react-router-dom": "^7.12.0",
-    "utility-types": "^3.11.0"
+    "utility-types": "^3.11.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -34,6 +35,7 @@
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
@@ -44,7 +46,6 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.53.1",
     "vite": "^7.3.1",
-    "vite-plugin-dts": "^4.5.4",
-    "babel-plugin-react-compiler": "^1.0.0"
+    "vite-plugin-dts": "^4.5.4"
   }
 }
