--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sovgut/datagrid-react-router",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "type": "module",
   "repository": {
     "type": "git",
@@ -21,13 +21,12 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@sovgut/datagrid": "4.5.1",
+    "@sovgut/datagrid": "4.5.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "^7.12.0",
     "react-router-dom": "^7.12.0",
-    "utility-types": "^3.11.0",
-    "zustand": "^5.0.10"
+    "utility-types": "^3.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
